NEST-App/Content/Map/GOOG/MapGOOG.css
@import url(http://fonts.googleapis.com/css?family=Arvo);

* {
    font-family: 'Arvo', sans-serif;
}

html, body, #map-canvas {
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

.right-buttons {
    right: 1px;
    padding-right: 5px;
    width: 100px;
    height: 200px;
    top: 90px;
    position: fixed;
}

.left-buttons {
    left: 40px;
    width: 200px;
    height: 200px;
    top: 35px;
    position: fixed;
}

#start {
    background-color: white;
    font-size: 12px;
    cursor: pointer;
    width: 55px;
    border-style: solid;
    border-width: 1px;
    border-color: black;
    float: right;
}

#stop {
    background-color: white;
    font-size: 12px;
    width: 55px;
    cursor: pointer;
    border-style: solid;
    border-width: 1px;
    border-color: black;
    float: right;
    margin: 10px 0 0 0;
}

.labels {
    color: blue;
    font-size: 12px;
    font-weight: bold;
    text-align: center;
    width: 60px;
}

#infobox {
    border: 1px solid black;
    margin-top: 8px;
    background: #333;
    color: #FFF;
    font-size: 10px;
    padding: .5em 2em;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 1px;
}

#infoboxAlert {
    border: 1px solid red;
    height: 40px;
    background: #333;
    color: #FFF;
    padding: 4px 0px 15px 4px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 1px;
}

#infoboxAlert p {
        color: #ff0000;
        margin: 0 1px;
        font-weight: bold;
        font-size: 25px;
    }

#panel {
    width: 200px;
    font-size: 13px;
    float: right;
}

#color-palette {
    clear: both;
}

.color-button {
    width: 14px;
    height: 14px;
    font-size: 0;
    margin: 2px;
    margin-left: 5px;
    float: left;
    cursor: pointer;
}

#delete-button {
    margin-top: 10px;
    background-color: white;
    font-size: 12px;
    cursor: pointer;
    width: 55px;
    border-style: solid;
    border-width: 1px;
    border-color: black;
    float: left;
}

#delete-all-button {
    margin-top: 10px;
    background-color: white;
    font-size: 12px;
    cursor: pointer;
    width: 55px;
    border-style: solid;
    border-width: 1px;
    border-color: black;
    margin-left: 10px;
}

#goWaypoint {
    background-color: white;
    font-size: 12px;
    width: 53px;
    cursor: pointer;
    border-style: solid;
    border-width: 1px;
    border-color: black;
    float: right;
    margin: 0;
}

#CommPopPlaceHolder {
    position: fixed;
    margin: auto;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    display: none;		
    background-color: rgba(185, 185, 185, 0.57);
    overflow: auto;
}

#notification {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 600px;
    min-width: 250px;
    padding: 10px 50px;
    border: 2px solid gray;
    border-radius: 10px;
    background-color: white;
    overflow: hidden;
    display: none;
}

#waypoint_popup {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 600px;
    min-width: 250px;
    padding: 10px 50px;
    border: 2px solid gray;
    border-radius: 10px;
    background-color: white;
    overflow: hidden;
    display: none;
}

#gotouavdiv{
    position: fixed;
    top: 80%;
    left: .5%;
    display: block;
    float: left;
    margin:auto;
    width: 170px;
    height: 60px;
}

#enter_callsign{
    max-width: 114px;
    min-width: 70px;
    max-height: 27px;
    padding: 10px 10px;
    display: block;
    float: left;
    margin:auto;
}

#gotouavbtn{
    margin-left: 2px;
}

#lockuavbtn{
    margin-top: 2px;
}

.commandWindow {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 600px;
    min-width: 250px;
    padding: 10px 50px;
    border: 2px solid gray;
    border-radius: 10px;
    background-color: white;
    overflow: hidden;
    display: none;
}

.UAVId {
}

.sendBtn {
    position: relative;
    float: left;
    border-radius: 5px;
    cursor: pointer;
}

.clear {
    position: relative;
    float: left;
    margin-left: 10px;
    border-radius: 5px;
    cursor: pointer;
}

.closeBtn {
    position: absolute;
    font-size: 1.5em;
    right: 11px;
    top: 10px;
    cursor: pointer;
}

#clickToGoBtn {
    margin-left: 25px;
}

  img[src="http://www.google.com/intl/en_us/mapfiles/close.gif"] {
        display: none;
}

/*/////////////////////////////////////////////////////////////////////*/
/* USER INTERFACE PROMPT TO ACCEPT OR REJECT UAV ASSIGNMENT ON MAP*/
#RR_outer {
    border: none;
    position: fixed;
    margin: auto;
    width: 200px;
    height: 150px;
    right: 5px;
    bottom: 5px;
    overflow: auto;
    padding: 0px;
    float: right;
}

#RoundRobin_popup {
    position: fixed;
    width: 200px;
    padding: 10px;
    border: 2px solid red;
    border-radius: 10px;
    background-color: white;
    overflow: hidden;
    display: none;
    font-size: 15px;

    -webkit-animation-name: RR;
    -webkit-animation-duration: 1.0s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-delay: 0s;
    -webkit-animation-direction: alternate;
    -webkit-animation-play-state: running;
}

/* bounce-in*/
@-webkit-keyframes RR {
    0% {opacity: 0; -webkit-transform: scale3d(.9, .9, .9);}
   20% {opacity: 0.8; -webkit-transform: scale3d(1.1, 1.1, 1.1);}
   40% {-webkit-transform: scale3d(.9, .9, .9);}
   60% {opacity: 1; -webkit-transform: scale3d(1.03, 1.03, 1.03);}
   80% {-webkit-transform: scale3d(.97, .97, .97);}
  100% {opacity: 1; -webkit-transform: scale3d(1, 1, 1);}

  /*fade in up*/
    /*0% {opacity: 0; -webkit-transform: translate3d(0, 100%, 0);}
    100% {opacity: 1; -webkit-transform: none;}*/
}

#RR_button_accept {
    background-color: #46d914;
    color: white;
    cursor: pointer;
    padding-right: 10px;
    padding-left: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
    border-radius: 5px;
    border: none;
    width: 48%;
    float: left;
    border-top:2px solid transparent;
    margin-left: 0;
    margin-right: 1%;
}

#RR_button_decline {
    background-color: #ee3f3f;
    color: white;
    cursor: pointer;
    padding-right: 10px;
    padding-left: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
    border-radius: 5px;
    border: none;
    width: 48%;
    float: right;
    border-top:2px solid transparent;
    margin-left: 0;
    margin-right: 1%;
}

#RR_button_accept:hover {
    text-shadow: 0 -1px 1px rgba(175, 49, 95, .9), 0 0 5px rgba(37, 152, 240, .8);
    background-color: #7CF259;
}

#RR_button_decline:hover {
    text-shadow: 0 -1px 1px rgba(175, 49, 95, .9), 0 0 5px rgba(37, 152, 240, .8);
    background-color: #FA8383;
}

#RR_close {
    position: absolute;
    font-size: 1.5em;
    right: 11px;
    top: 10px;
    cursor: pointer;
}

#RR_outer_result {
    border: 5px solid black;
    position: fixed;
    margin: auto;
    width: 40%;
    height: auto;
    bottom: 10%;
    left: 30%;
    background-color: rgba(185, 185, 185, 0.57);
    overflow: auto;
    border-radius: 8px;
    display:none;
    
    -webkit-animation-name: RR_result;
    -webkit-animation-duration: 1.0s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-delay: 0s;
    -webkit-animation-direction: alternate;
    -webkit-animation-play-state: running;
}

#RR_choice_p {
    font-size: 35px;
    font-weight: bold;
    text-align: center;
    margin: 0px;
}

@-webkit-keyframes RR_result {
    0% {opacity: 1;}
  100% {opacity: 0;-webkit-transform: translate3d(0, 100%, 0)}
}

